[gd_scene load_steps=25 format=3 uid="uid://dbxv3dvdgxqku"]

[ext_resource type="Script" path="res://scenes/Levels/level_4.gd" id="1_kyprc"]
[ext_resource type="PackedScene" uid="uid://b4w1u18aercdb" path="res://scenes/player.tscn" id="2_0xqfv"]
[ext_resource type="PackedScene" uid="uid://cwpg2sneyq6rf" path="res://scenes/player2.tscn" id="3_k1qg0"]
[ext_resource type="TileSet" uid="uid://d3k1ar04o4po5" path="res://scenes/tileset.tres" id="4_qkbe4"]
[ext_resource type="PackedScene" uid="uid://cmr01mlt3f52b" path="res://scenes/dog.tscn" id="5_meaf1"]
[ext_resource type="PackedScene" uid="uid://cgboi5v27efyg" path="res://scenes/next_level.tscn" id="6_3gsdn"]
[ext_resource type="AudioStream" uid="uid://chtovm7p74sr2" path="res://assets/music/DS3_yhorm.mp3" id="7_ju2j3"]
[ext_resource type="PackedScene" uid="uid://pcaofyls6j15" path="res://scenes/boss_balrog.tscn" id="9_1dfpe"]
[ext_resource type="PackedScene" uid="uid://bu417xy1d2ql2" path="res://scenes/orc.tscn" id="10_di7sg"]
[ext_resource type="PackedScene" uid="uid://b5cs6ubf1g8ex" path="res://scenes/zwockel.tscn" id="10_or2vq"]
[ext_resource type="PackedScene" uid="uid://dicdpchxv8chk" path="res://scenes/platform.tscn" id="11_vvatw"]
[ext_resource type="PackedScene" uid="uid://dtpn5wksg1o0v" path="res://scenes/coin.tscn" id="12_jgi64"]
[ext_resource type="Texture2D" uid="uid://dick1114k4bpt" path="res://assets/background/7MF3Jn.png" id="13_mck5c"]
[ext_resource type="PackedScene" uid="uid://274q48wo4um8" path="res://scenes/kill_zone.tscn" id="14_u1xh5"]
[ext_resource type="PackedScene" uid="uid://da8cxn8q226je" path="res://scenes/dutch_ingredient.tscn" id="15_p20n5"]
[ext_resource type="PackedScene" uid="uid://dir78bid8yy53" path="res://scenes/music.tscn" id="16_xvut6"]
[ext_resource type="AudioStream" uid="uid://1lhg571c1u60" path="res://assets/sounds/unsere_sounds/Level 4 Zwerg.mp3" id="17_x4agf"]
[ext_resource type="AudioStream" uid="uid://dxuh4jyo8bahx" path="res://assets/sounds/unsere_sounds/Level 4 Einleitung.mp3" id="18_p4ngc"]
[ext_resource type="AudioStream" uid="uid://3kxd4b47t5d1" path="res://assets/sounds/unsere_sounds/Level 4 Sieg gegen Balrog.mp3" id="19_kq88k"]
[ext_resource type="PackedScene" uid="uid://duiiwlk637k1h" path="res://scenes/enemy.tscn" id="20_d0yyw"]
[ext_resource type="PackedScene" uid="uid://c5hlt0s8c173l" path="res://scenes/fledermaus.tscn" id="21_ss0y6"]
[ext_resource type="PackedScene" uid="uid://crdkqnrftkrsf" path="res://scenes/decaying_platform.tscn" id="22_occ7d"]
[ext_resource type="PackedScene" uid="uid://baatg8r1fex7a" path="res://scenes/lava_floor.tscn" id="23_frtq6"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_slan4"]
a = Vector2(2771, -18)
b = Vector2(-2325, 3)

[node name="Level4" type="Node2D"]
position = Vector2(18, 132)
script = ExtResource("1_kyprc")

[node name="Player" parent="." instance=ExtResource("2_0xqfv")]
unique_name_in_owner = true
position = Vector2(740, -26)

[node name="Player2" parent="." instance=ExtResource("3_k1qg0")]
unique_name_in_owner = true
position = Vector2(683, -26)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(9, 10)
tile_set = ExtResource("4_qkbe4")
format = 2
layer_0/tile_data = PackedInt32Array(196607, 131076, 2, 131072, 131076, 2, 131073, 131076, 2, 131074, 131076, 2, 131075, 131076, 2, 131076, 131076, 2, 131077, 131076, 2, 131078, 131076, 2, 131079, 131076, 2, 131080, 131076, 2, 131081, 131076, 2, 131082, 131076, 2, 131083, 131076, 2, 131084, 131076, 2, 131085, 131076, 2, 65549, 131076, 2, 13, 131076, 2, 65548, 131076, 2, 14, 131076, 2, 16, 131076, 2, 17, 131076, 2, 18, 131076, 2, 19, 131076, 2, 20, 131076, 2, 21, 131076, 2, 22, 131076, 2, 23, 131076, 2, 24, 131076, 2, 25, 131076, 2, 26, 131076, 2, 65562, 131076, 2, 65563, 131076, 2, 65564, 131076, 2, 131100, 131076, 3, 131101, 131076, 2, 131070, 131076, 2, 196606, 131076, 2, 196605, 131076, 2, 131069, 131076, 2, 131068, 131076, 2, 196604, 131076, 2, 262140, 131076, 2, 131067, 131076, 2, 196603, 131076, 2, 262139, 131076, 2, 262141, 131076, 3, 262142, 131076, 3, 262143, 131076, 3, 196608, 131076, 3, 196609, 131076, 3, 196610, 131076, 3, 196611, 131076, 3, 196612, 131076, 3, 196613, 131076, 3, 196614, 131076, 3, 196615, 131076, 3, 196616, 131076, 3, 196617, 131076, 3, 196618, 131076, 3, 196619, 131076, 3, 196620, 131076, 3, 196621, 131076, 3, 65550, 131076, 3, 131086, 131076, 3, 196622, 131076, 3, 196623, 131076, 3, 131087, 131076, 3, 65552, 131076, 3, 65553, 131076, 3, 131088, 131076, 3, 131089, 131076, 3, 196624, 131076, 3, 196625, 131076, 3, 196626, 131076, 3, 196627, 131076, 3, 131090, 131076, 3, 131091, 131076, 3, 131092, 131076, 3, 131093, 131076, 3, 131094, 131076, 3, 131095, 131076, 3, 131096, 131076, 3, 65560, 131076, 3, 65559, 131076, 3, 65558, 131076, 3, 65557, 131076, 3, 65556, 131076, 3, 65555, 131076, 3, 65554, 131076, 3, 196628, 131076, 3, 196629, 131076, 3, 196630, 131076, 3, 196631, 131076, 3, 196632, 131076, 3, 65561, 131076, 3, 131098, 131076, 3, 196634, 131076, 3, 262170, 131076, 3, 196633, 131076, 3, 131097, 131076, 3, 196635, 131076, 3, 131099, 131076, 3, 196636, 131076, 3, 196637, 131076, 3, 196602, 131076, 3, 262138, 131076, 3, 327674, 131076, 3, 327675, 131076, 3, 327676, 131076, 3, 327677, 131076, 3, 327678, 131076, 3, 327679, 131076, 3, 262144, 131076, 3, 262145, 131076, 3, 262146, 131076, 3, 262147, 131076, 3, 262148, 131076, 3, 262149, 131076, 3, 262150, 131076, 3, 262151, 131076, 3, 262152, 131076, 3, 262153, 131076, 3, 262154, 131076, 3, 262155, 131076, 3, 262156, 131076, 3, 262157, 131076, 3, 262158, 131076, 3, 262159, 131076, 3, 262160, 131076, 3, 262161, 131076, 3, 262162, 131076, 3, 262163, 131076, 3, 262164, 131076, 3, 262165, 131076, 3, 262166, 131076, 3, 262167, 131076, 3, 262168, 131076, 3, 262169, 131076, 3, 327706, 131076, 4, 327705, 131076, 4, 327704, 131076, 4, 327703, 131076, 4, 327702, 131076, 3, 327701, 131076, 3, 327700, 131076, 3, 327699, 131076, 4, 327698, 131076, 4, 327697, 131076, 4, 327696, 131076, 4, 327695, 131076, 4, 327694, 131076, 4, 327693, 131076, 4, 327692, 131076, 4, 327691, 131076, 4, 327690, 131076, 4, 327689, 131076, 4, 327688, 131076, 4, 327687, 131076, 4, 327686, 131076, 4, 327685, 131076, 4, 327684, 131076, 4, 327683, 131076, 4, 327682, 131076, 3, 327681, 131076, 3, 327680, 131076, 3, 393215, 131076, 3, 393214, 131076, 3, 393213, 131076, 3, 393212, 131076, 3, 393211, 131076, 3, 393210, 131076, 3, 393209, 131076, 3, 393208, 131076, 3, 393207, 131076, 3, 393206, 131076, 3, 393205, 131076, 3, 393204, 131076, 3, 393203, 131076, 3, 393202, 131076, 3, 393201, 131076, 3, 393200, 131076, 3, 327666, 131076, 3, 327667, 131076, 3, 327668, 131076, 3, 327669, 131076, 3, 327670, 131076, 3, 262134, 131076, 3, 262135, 131076, 3, 196599, 131076, 3, 196600, 131076, 3, 196601, 131076, 3, 262137, 131076, 3, 327673, 131076, 3, 262136, 131076, 3, 327672, 131076, 3, 327671, 131076, 3, 458743, 131076, 4, 196598, 131076, 3, 262133, 131076, 3, 196597, 131076, 3, 196596, 131076, 3, 262132, 131076, 3, 458740, 131076, 4, 458744, 131076, 4, 458745, 131076, 4, 458746, 131076, 4, 458747, 131076, 4, 458748, 131076, 4, 458749, 131076, 4, 458750, 131076, 4, 458751, 131076, 4, 393216, 131076, 4, 393217, 131076, 4, 393218, 131076, 4, 393236, 131076, 4, 393237, 131076, 4, 393238, 131076, 4, 393239, 131076, 4, 393240, 131076, 4, 393241, 131076, 4, 393242, 131076, 4, 393243, 131076, 4, 393235, 131076, 4, 393234, 131076, 4, 393233, 131076, 4, 393232, 131076, 4, 393231, 131076, 4, 393230, 131076, 4, 393229, 131076, 4, 393228, 131076, 4, 393227, 131076, 4, 393226, 131076, 4, 393225, 131076, 4, 393224, 131076, 4, 393223, 131076, 4, 393222, 131076, 4, 393221, 131076, 4, 393220, 131076, 4, 393219, 131076, 4, 524284, 131076, 4, 524283, 131076, 4, 524282, 131076, 4, 524281, 131076, 4, 524280, 131076, 4, 524279, 131076, 4, 524278, 131076, 4, 524277, 131076, 4, 524276, 131076, 4, 524275, 131076, 4, 524274, 131076, 4, 524273, 131076, 4, 524272, 131076, 4, 458736, 131076, 4, 458737, 131076, 4, 458738, 131076, 4, 458739, 131076, 4, 458741, 131076, 4, 458742, 131076, 4, 524285, 131076, 4, 524286, 131076, 4, 524287, 131076, 4, 458752, 131076, 4, 458753, 131076, 4, 458754, 131076, 4, 458755, 131076, 4, 458756, 131076, 4, 458757, 131076, 4, 458758, 131076, 4, 458759, 131076, 4, 458760, 131076, 4, 458761, 131076, 4, 458762, 131076, 4, 458763, 131076, 4, 458764, 131076, 4, 393244, 131076, 4, 393245, 131076, 4, 458782, 131076, 4, 458783, 131076, 4, 458781, 131076, 4, 458780, 131076, 4, 458779, 131076, 4, 458778, 131076, 4, 458777, 131076, 4, 458776, 131076, 4, 458775, 131076, 4, 458774, 131076, 3, 458773, 131076, 3, 458772, 131076, 3, 458771, 131076, 3, 458770, 131076, 3, 458769, 131076, 3, 458768, 131076, 3, 458767, 131076, 3, 458766, 131076, 4, 458765, 131076, 4, 327707, 131076, 4, 262171, 131076, 4, 262172, 131076, 4, 327708, 131076, 4, 327709, 131076, 4, 262173, 131076, 4, 262174, 131076, 4, 65536, 6, 1, 65543, 65541, 1, -65522, 65541, 1, 65544, 196613, 2, 65538, 6, 1, 65546, 393221, 4, -65519, 393221, 4, -65511, 393221, 4, 27, 131076, 2, 131102, 131076, 2, 196638, 131076, 2, 262175, 131076, 2, 327711, 131076, 2, 327710, 131076, 2, 393246, 131076, 2, 393247, 131076, 2, 720944, 131076, 3, 655408, 131076, 3, 655409, 131076, 3, 589873, 131076, 3, 524338, 131076, 3, 458802, 131076, 2, 393266, 131076, 2, 327730, 131076, 2, 327731, 131076, 3, 262195, 131076, 2, 196659, 131076, 2, 131123, 131076, 2, 65587, 131076, 2, 51, 131076, 2, -65485, 131076, 2, -65486, 131076, 2, -131022, 131076, 2, -196558, 131076, 2, -262094, 131076, 2, -262093, 131076, 2, -327629, 131076, 2, -196557, 131076, 2, -131021, 131076, 2, 393264, 131076, 2, 393265, 131076, 2, 458800, 131076, 3, 458801, 131076, 3, 524336, 131076, 3, 524337, 131076, 3, 589872, 131076, 3, 524318, 131076, 3, 524319, 131076, 3, 524339, 131076, 3, 524340, 131076, 3, 524317, 131076, 3, 589853, 131076, 3, 589854, 131076, 3, 589855, 131076, 3, 589874, 131076, 3, 589875, 131076, 3, 720945, 131076, 3, 720946, 131076, 3, 720927, 131076, 3, 720926, 131076, 3, 720925, 131076, 3, 720924, 131076, 3, 720923, 131076, 3, 720922, 131076, 3, 720921, 131076, 3, 720920, 131076, 3, 655384, 131076, 3, 655385, 131076, 3, 655386, 131076, 3, 655387, 131076, 3, 655388, 131076, 3, 655389, 131076, 3, 655390, 131076, 3, 655391, 131076, 3, 655410, 131076, 3, 655411, 131076, 3, 655412, 131076, 3, 655413, 131076, 3, 720947, 131076, 3, 458803, 131076, 3, 458804, 131076, 3, 393268, 131076, 3, 327732, 131076, 3, 393267, 131076, 3, 589876, 131076, 3, 720948, 131076, 3, 589852, 131076, 3, 589851, 131076, 3, 589850, 131076, 3, 589849, 131076, 3, 589848, 131076, 3, 589847, 131076, 3, 589846, 131076, 3, 589845, 131076, 3, 589844, 131076, 3, 589843, 131076, 3, 524312, 131076, 3, 524313, 131076, 3, 524314, 131076, 3, 524315, 131076, 3, 524316, 131076, 3, 524311, 131076, 3, 524310, 131076, 3, 524309, 131076, 3, 524308, 131076, 3, 524307, 131076, 3, 524306, 131076, 3, 524305, 131076, 3, 524304, 131076, 3, 524303, 131076, 3, 262196, 131076, 3, 196660, 131076, 3, 131124, 131076, 3, 65588, 131076, 3, 52, 131076, 3, -65484, 131076, 3, 53, 131076, 3, 65589, 131076, 3, 131125, 131076, 3, 196661, 131076, 3, 262197, 131076, 3, 327733, 131076, 3, 393269, 131076, 3, 458805, 131076, 3, 524341, 131076, 3, 589877, 131076, 3, 655414, 131076, 3, 720950, 131076, 3, 786486, 131076, 3, 720949, 131076, 3, 786485, 131076, 3, 589878, 131076, 3, 524342, 131076, 3, 458806, 131076, 3, 393270, 131076, 3, 327734, 131076, 3, 262198, 131076, 3, 196662, 131076, 3, 131126, 131076, 3, 65590, 131076, 3, 54, 131076, 3, -65482, 131076, 3, -65483, 131076, 3, -131019, 131076, 3, -131020, 131076, 3, -196556, 131076, 3, -262092, 131076, 3, -327628, 131076, 3, -327627, 131076, 3, -327626, 131076, 3, -262090, 131076, 3, -196554, 131076, 3, -131018, 131076, 3, -196555, 131076, 3, -262091, 131076, 3, -65516, 2, 1, 15, 131076, 2, 65551, 131076, 2, 65476, 131076, 2, 65477, 131076, 2, 65478, 131076, 2, 65479, 131076, 2, 65480, 131076, 2, 65481, 131076, 2, 65482, 131076, 2, 65483, 131076, 2, 65484, 131076, 2, 65485, 131076, 2, 65486, 131076, 2, 65488, 131076, 2, 65490, 131076, 2, 65492, 131076, 2, 65494, 131076, 2, 65496, 131076, 2, 65498, 131076, 2, -37, 131076, 2, -65572, 131076, 2, -35, 131076, 2, 65502, 131076, 2, 65504, 131076, 2, 65506, 131076, 2, 131043, 131076, 2, 131044, 131076, 2, 131045, 131076, 2, 131046, 131076, 2, 131047, 131076, 2, 131048, 131076, 2, 131049, 131076, 2, 131050, 131076, 2, 65515, 131076, 2, 131051, 131076, 2, 65516, 131076, 2, 65517, 131076, 2, 65518, 131076, 2, 65519, 131076, 2, 65520, 131076, 2, 65521, 131076, 2, 65522, 131076, 2, 131059, 131076, 2, 458725, 131076, 2, 458724, 131076, 2, 458723, 131076, 2, 458722, 131076, 2, 458721, 131076, 2, 458720, 131076, 2, 458719, 131076, 2, 458718, 131076, 2, 458717, 131076, 2, 458716, 131076, 2, 458715, 131076, 2, 458714, 131076, 2, 458713, 131076, 2, 458712, 131076, 2, 458711, 131076, 2, 458710, 131076, 2, 458709, 131076, 2, 458708, 131076, 2, 458707, 131076, 2, 458706, 131076, 2, 458705, 131076, 2, 458704, 131076, 2, 458703, 131076, 2, 458726, 131076, 2, 393190, 131076, 2, 327654, 131076, 2, 262118, 131076, 2, 196582, 131076, 2, 458702, 131076, 2, 458701, 131076, 2, 458700, 131076, 2, 458699, 131076, 2, 393162, 131076, 2, 327625, 131076, 2, 327624, 131076, 2, 327623, 131076, 2, 327622, 131076, 2, 327621, 131076, 2, 262084, 131076, 2, 262083, 131076, 2, 196546, 131076, 2, 196545, 131076, 2, 131008, 131076, 2, 131007, 131076, 2, 131006, 131076, 2, 65470, 131076, 2, 65469, 131076, 2, -68, 131076, 2, -65605, 131076, 2, -65606, 131076, 2, -65607, 131076, 2, -196675, 131076, 2, -196674, 131076, 2, -196673, 131076, 2, -196672, 131076, 2, -196671, 131076, 2, -196670, 131076, 2, -131133, 131076, 2, -65596, 131076, 2, -59, 131076, 2, -65597, 131076, 2, -131134, 131076, 2, -69, 131076, 2, 65468, 131076, 2, 196544, 131076, 2, 262082, 131076, 2, 327620, 131076, 2, 458698, 131076, 2, 65489, 131076, 2, 65493, 131076, 2, 65503, 131076, 2, 393161, 131076, 2, 65566, 3, 0, -65509, 3, 0, -65510, 3, 0, 393182, 6, 0, 393185, 6, 1, 65540, 6, 1, 65530, 6, 1, 65528, 6, 1, 65526, 6, 1, 65527, 6, 0, 65529, 6, 0, 65537, 6, 0, 65539, 6, 0, -65545, 131076, 2, -65546, 131076, 2, -65544, 131076, 2, -65543, 131076, 2, -65542, 131076, 2, 65507, 7, 0, 12, 7, 0, -196605, 131076, 2, -196604, 131076, 2, -196603, 131076, 2, -196602, 131076, 2, -196601, 131076, 2, -196600, 131076, 2, -196599, 131076, 2, -196598, 131076, 2, -196597, 131076, 2, -196596, 131076, 2, -196595, 131076, 2, -196594, 131076, 2, -196606, 131076, 2, -196607, 131076, 2, -196608, 131076, 2, -262212, 131076, 2, -262213, 131076, 2, 131060, 131076, 2, 131061, 131076, 2, 131062, 131076, 2, 131063, 131076, 2, 131064, 131076, 2, 131065, 131076, 2, 131066, 131076, 2, 393165, 65547, 1, 262087, 11, 2, 262085, 65547, 2, 393183, 11, 1, 196639, 131076, 2, 131103, 131076, 2, 524320, 65547, 1342177281)

[node name="Dog" parent="." instance=ExtResource("5_meaf1")]
position = Vector2(784, -17)

[node name="NextLevel" parent="." instance=ExtResource("6_3gsdn")]
position = Vector2(1847, -126)

[node name="BossMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ju2j3")

[node name="Zwockel" parent="." instance=ExtResource("10_or2vq")]
position = Vector2(722, -6)

[node name="Boss_Balrog" parent="." instance=ExtResource("9_1dfpe")]
position = Vector2(1578, 207)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(459.125, 187.625)
scale = Vector2(0.499297, 0.526094)
texture = ExtResource("13_mck5c")

[node name="Platforms" type="Node" parent="."]

[node name="Platform7" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-344, 109)

[node name="Platform8" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-100, 68)

[node name="Platform9" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-33, 59)

[node name="Platform10" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-382, 109)

[node name="Platform" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-2232, 38)

[node name="Platform2" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-2218, 3)

[node name="Platform3" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-1513, 297)

[node name="Platform4" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-1218, 297)

[node name="Platform5" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-1400, 299)

[node name="Platform6" parent="Platforms" instance=ExtResource("11_vvatw")]
position = Vector2(-881, 299)

[node name="Platform11" parent="Platforms" instance=ExtResource("11_vvatw")]
modulate = Color(0.442445, 0.497888, 1, 1)
position = Vector2(2464, 552)

[node name="Platform12" parent="Platforms" instance=ExtResource("11_vvatw")]
modulate = Color(0.442445, 0.497888, 1, 1)
position = Vector2(2464, 552)

[node name="DecayPlatform4" parent="Platforms" instance=ExtResource("22_occ7d")]
position = Vector2(1298, 342)

[node name="DecayPlatform5" parent="Platforms" instance=ExtResource("22_occ7d")]
position = Vector2(1062, 340)

[node name="DecayPlatform7" parent="Platforms" instance=ExtResource("22_occ7d")]
position = Vector2(1182, 341)

[node name="DecayPlatform10" parent="Platforms" instance=ExtResource("22_occ7d")]
position = Vector2(1413, 342)

[node name="DecayPlatform12" parent="Platforms" instance=ExtResource("22_occ7d")]
position = Vector2(1528, 343)

[node name="Platform13" parent="Platforms" instance=ExtResource("11_vvatw")]
modulate = Color(0.442445, 0.497888, 1, 1)
position = Vector2(1123, 341)

[node name="Platform14" parent="Platforms" instance=ExtResource("11_vvatw")]
modulate = Color(0.442445, 0.497888, 1, 1)
position = Vector2(1241, 342)

[node name="Platform15" parent="Platforms" instance=ExtResource("11_vvatw")]
modulate = Color(0.442445, 0.497888, 1, 1)
position = Vector2(1358, 342)

[node name="Platform16" parent="Platforms" instance=ExtResource("11_vvatw")]
modulate = Color(0.442445, 0.497888, 1, 1)
position = Vector2(1471, 342)

[node name="Enemies" type="Node" parent="."]
unique_name_in_owner = true

[node name="CharacterBody2D2" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(463, 15)

[node name="CharacterBody2D3" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(360, 8)

[node name="CharacterBody2D4" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(218, 5)

[node name="CharacterBody2D5" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(115, -2)

[node name="CharacterBody2D6" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-161, 4)

[node name="CharacterBody2D7" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-250, 25)

[node name="CharacterBody2D8" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-953, 255)

[node name="CharacterBody2D9" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-1011, 260)

[node name="CharacterBody2D10" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-1118, 306)

[node name="CharacterBody2D11" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-1176, 311)

[node name="CharacterBody2D12" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-1267, 294)

[node name="CharacterBody2D13" parent="Enemies" instance=ExtResource("10_di7sg")]
position = Vector2(-1325, 299)

[node name="Coins" type="Node" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1505, 269)

[node name="Coin2" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1210, 271)

[node name="Coin3" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1392, 269)

[node name="Coin4" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-879, 267)

[node name="Coin5" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-277, 130)

[node name="Coin6" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-214, 131)

[node name="Coin7" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-150, 130)

[node name="Coin8" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1908, 218)

[node name="Coin9" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-2009, 155)

[node name="Coin10" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-2130, 91)

[node name="Coin11" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1942, -8)

[node name="Coin12" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1399, 102)

[node name="Coin13" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1525, 105)

[node name="Coin14" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1271, 101)

[node name="Coin15" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1204, 101)

[node name="Coin16" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(-1109, 24)

[node name="Coin17" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(1641, 281)

[node name="Coin18" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(1606, 315)

[node name="Coin19" parent="Coins" instance=ExtResource("12_jgi64")]
position = Vector2(1640, 249)

[node name="KillZone" parent="." instance=ExtResource("14_u1xh5")]
position = Vector2(-567, 35)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(138, 440)
shape = SubResource("SegmentShape2D_slan4")

[node name="dutch_ingredient" parent="." instance=ExtResource("15_p20n5")]
position = Vector2(-870, 134)

[node name="Music" parent="." instance=ExtResource("16_xvut6")]
max_distance = 50000.0

[node name="CharacterBody2D13" parent="." instance=ExtResource("10_di7sg")]
position = Vector2(-1595, -48)

[node name="story_zwerg" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_x4agf")

[node name="story_intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_p4ngc")

[node name="story_ende" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_kq88k")

[node name="Enemy" parent="." instance=ExtResource("20_d0yyw")]
position = Vector2(-846, 18)

[node name="Enemy2" parent="." instance=ExtResource("20_d0yyw")]
position = Vector2(-719, 18)

[node name="Enemy3" parent="." instance=ExtResource("20_d0yyw")]
position = Vector2(250, 50)

[node name="Enemy4" parent="." instance=ExtResource("20_d0yyw")]
position = Vector2(89, 50)

[node name="Fledermaus" parent="." instance=ExtResource("21_ss0y6")]
position = Vector2(-1442, 95)

[node name="Fledermaus2" parent="." instance=ExtResource("21_ss0y6")]
position = Vector2(-987, -92)

[node name="Fledermaus3" parent="." instance=ExtResource("21_ss0y6")]
position = Vector2(-1940, -180)

[node name="Fledermaus4" parent="." instance=ExtResource("21_ss0y6")]
position = Vector2(841, -84)

[node name="LavaFloor" parent="." instance=ExtResource("23_frtq6")]
position = Vector2(1097, 273)
scale = Vector2(4, 4)

[node name="LavaFloor2" parent="." instance=ExtResource("23_frtq6")]
position = Vector2(1223, 273)
scale = Vector2(4, 4)

[node name="LavaFloor3" parent="." instance=ExtResource("23_frtq6")]
position = Vector2(1350, 273)
scale = Vector2(4, 4)

[node name="LavaFloor4" parent="." instance=ExtResource("23_frtq6")]
position = Vector2(1478, 273)
scale = Vector2(4, 4)
